Enhance UI and add role-based appointment status
Improved the UI styling and color scheme for BillingPanel, including styled tables, buttons, and input fields. AppointmentPanel now supports role-based status updates for appointments, with a demo for switching roles and dynamic button states. Various dialogs and notifications were added for better user feedback and clarity.